first_add_classes

--- a/src/01-color-switcher.html
+++ b/src/01-color-switcher.html
@@ -9,8 +9,8 @@
   <body>
     <p><a href="index.html">Go back</a></p>
 
-    <button type="button" class="first" data-start>Start</button>
-    <button type="button" class="first" data-stop>Stop</button>
+    <button type="button" class="first js-start" data-start>Start</button>
+    <button type="button" class="first js-stop" data-stop>Stop</button>
 
     <script src="js/01-color-switcher.js" type="module"></script>
   </body>
